--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^1.3.0
   numberpicker: ^2.1.2
+  haptic_feedback: ^0.5.1+1
 
 dev_dependencies:
   flutter_test:
